2008-02-27  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/update-notifier-conf.h : defined URL_VARIABLE_PREFIX,
	URL_VARIABLE_SUFFIX and URL_VARIABLE_HARDWARE

	* src/update-notifier.c (update_state) : substitute existing
	variables in the URL when the menu is created
	(url_eval) : evaluates the variables in the given string
	(str_substitute) : substitutes each appearance of a code in a
	string with the given value
	(str_find_pos) : returns the position of a substring in a string

2008-02-26  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/update-notifier.c (safe_signal_disconnect): New function to
	easily disconnect signals handler withouth having to take care of
	those which haven't ever been connected yet.
	(update_state): Use safe_signal_disconnect to disconnect all the
	signal handlers, therefore to avoid invalid disconnections.

2008-02-26  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/update-notifier.c (get_osso_product_hardware): New.

2008-02-25  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* util.cc (make_global_package_list) : Add the title of the
	version column (N80908).

2008-02-22  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* util.cc : (entertainment_update_title) the label doesn't
	ellipsize unless it is too big; otherwise its requisition
	would be too small and the dialog wouldn't need to expand
	(start_entertaining_user) : the dialog's width can be
	between 400 and 700 pixels, so there is enough room for
	longer labels (N80495).

2008-02-21  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* ham-long-label.[ch] : Added legal notice.

2008-02-21  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/usr_files.h, src/user_files.h (user_file_remove): New, used
	to easily remove files from the per-user state directory.
	(user_file_get_state_dir_path): Create dir if it doesn't exist.
	(user_file_open_for_read): Don't take care of creating the
	directory, as user_file_get_state_dir_path will do the work.